--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,6 +28,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            !models/
+            !configs/
+          sparse-checkout-cone-mode: false
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
