--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -8,6 +8,12 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Reason for manual deployment'
+        required: false
+        default: 'Manual deployment'
+        type: string
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -30,8 +36,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: |
-            !models/
-            !configs/
+            *
+            !models/*.onnx
+            !configs/*.cfg
           sparse-checkout-cone-mode: false
       - name: Setup Pages
         uses: actions/configure-pages@v5
