--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -8,6 +8,7 @@ on:
     - '.github/workflows/jekyll-gh-pages.yml'
     - 'index.html'
     - 'style.css'
+    - 'script.js' # just in case i ever split the javascript into another fiel
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
