--- a/.github/workflows/onnx-md-parser.yml
+++ b/.github/workflows/onnx-md-parser.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Run ONNX-MD-Parser on ONNX models
       run: |
         cd tools/onnx-md-parser/bin/Release/net8.0
-        ./onnx-md-parser ../../../../../models ../../../../../models 
+        ./onnx-md-parser ../../../../../models ../../../../../models/metadata.json
 
     - name: Commit and Push Metadata
       run: |
