chore: update gitignore, ignores metadata.json

--- a/.gitignore
+++ b/.gitignore
@@ -313,3 +313,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# might break the github action
+models/metadata.json 
