--- a/.gitignore
+++ b/.gitignore
@@ -314,3 +314,7 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
+tools/discord-file-scraper/onnx
+tools/discord-file-scraper/cfg
+tools/discord-file-scraper/pt
+tools/discord-file-scraper/duplicates
