chore: update commit message in onnx-md-parser.yml workflow

--- a/.github/workflows/onnx-md-parser.yml
+++ b/.github/workflows/onnx-md-parser.yml
@@ -40,7 +40,7 @@ jobs:
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         ls
         git add models/metadata.json
-        git commit -m "Update metadata.json [from ONNX-MD-Parser workflow]"
+        git commit -m "chore: update metadata.json from ONNX-MD-Parser workflow"
         git push origin HEAD
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
