chore: update .gitignore and enhance CLI feedback
- Added `.env` files to `.gitignore` for the
  `tools/discord-file-scraper/` directory to prevent
  tracking by Git.

- Implemented a check for CLI mode in `Program.cs`
  to prompt for Discord token, Guild ID, and Channel
  ID when no arguments are provided.

- Enhanced logging in CLI mode to display the token
  (partially masked), Guild ID, Channel ID, and
  options for checking duplicates and skipping downloads.

--- a/.gitignore
+++ b/.gitignore
@@ -318,3 +318,5 @@ tools/discord-file-scraper/onnx
 tools/discord-file-scraper/cfg
 tools/discord-file-scraper/pt
 tools/discord-file-scraper/duplicates
+.env
+**/**/.env
